[gd_scene load_steps=17 format=3 uid="uid://njld34jadt6l"]

[ext_resource type="Script" uid="uid://b6utwne0wish1" path="res://scripts/components/minigames/archery/target_component.gd" id="1_25hei"]
[ext_resource type="Texture2D" uid="uid://cyxmfx7wlmskq" path="res://assets/sprites/minigames/archery/sky_targets.png" id="1_bau13"]

[sub_resource type="AtlasTexture" id="AtlasTexture_25hei"]
atlas = ExtResource("1_bau13")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gng8b"]
atlas = ExtResource("1_bau13")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g12mc"]
atlas = ExtResource("1_bau13")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybxpi"]
atlas = ExtResource("1_bau13")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6k13v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_25hei")
}],
"loop": true,
"name": &"bronze",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gng8b")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g12mc")
}],
"loop": true,
"name": &"gold",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybxpi")
}],
"loop": true,
"name": &"silver",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_k5o0u"]
radius = 8.0

[sub_resource type="Curve" id="Curve_u11ml"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.684, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_gng8b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_25hei"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g12mc"]
_data = {
&"RESET": SubResource("Animation_gng8b"),
&"appear": SubResource("Animation_25hei")
}

[sub_resource type="Gradient" id="Gradient_ybxpi"]
offsets = PackedFloat32Array(0, 0.296296, 0.648148, 0.981481)
colors = PackedColorArray(1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_25hei"]
offsets = PackedFloat32Array(0, 0.296296, 0.648148, 0.981481)
colors = PackedColorArray(0.560784, 0.337255, 0.231373, 1, 0.85098, 0.627451, 0.4, 1, 0.741176, 0.521569, 0.419608, 1, 0.941176, 0.776471, 0.603922, 1)

[sub_resource type="Gradient" id="Gradient_gng8b"]
offsets = PackedFloat32Array(0, 0.296296, 0.648148, 0.953704)
colors = PackedColorArray(0.513726, 0.513726, 0.513726, 1, 0.772549, 0.756863, 0.752941, 1, 0.4, 0.4, 0.4, 1, 0.772549, 0.772549, 0.772549, 1)

[sub_resource type="Gradient" id="Gradient_g12mc"]
offsets = PackedFloat32Array(0, 0.296296, 0.648148, 0.953704)
colors = PackedColorArray(0.858824, 0.658824, 0, 1, 1, 0.768627, 0, 1, 0.658824, 0.505882, 0, 1, 1, 0.847059, 0.333333, 1)

[node name="TargetComponent" type="Area2D"]
script = ExtResource("1_25hei")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 1
sprite_frames = SubResource("SpriteFrames_6k13v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_k5o0u")

[node name="ControlHitParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.75
one_shot = true
explosiveness = 0.8
randomness = 1.0
spread = 180.0
gravity = Vector2(0, 5)
initial_velocity_min = 60.0
initial_velocity_max = 60.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
linear_accel_min = -200.0
linear_accel_max = -200.0
scale_amount_curve = SubResource("Curve_u11ml")
color = Color(0.0980392, 0.639216, 1, 1)

[node name="ExperimentalHitParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.75
one_shot = true
explosiveness = 0.8
randomness = 1.0
spread = 180.0
gravity = Vector2(0, 5)
initial_velocity_min = 60.0
initial_velocity_max = 60.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
linear_accel_min = -200.0
linear_accel_max = -200.0
scale_amount_curve = SubResource("Curve_u11ml")
color = Color(1, 0.835294, 0.0980392, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_g12mc")
}

[node name="AppearParticlesDefault" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
one_shot = true
explosiveness = 0.5
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector2(0, 0)
color_ramp = SubResource("Gradient_ybxpi")

[node name="AppearParticlesBronze" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
one_shot = true
explosiveness = 0.5
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector2(0, 0)
color_ramp = SubResource("Gradient_25hei")

[node name="AppearParticlesSilver" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
one_shot = true
explosiveness = 0.5
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector2(0, 0)
color_ramp = SubResource("Gradient_gng8b")

[node name="AppearParticlesGold" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
one_shot = true
explosiveness = 0.5
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector2(0, 0)
color_ramp = SubResource("Gradient_g12mc")

[connection signal="input_event" from="." to="." method="_on_input_event"]
